[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asynctimer"
version = "0.1.0"
description = "A precise, cancellation-safe asyncio timer for Python that avoids drift"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "sumitdhyani", email = "sumitdhyani1@gmail.com" }
]

keywords = [
    "asyncio timer",
    "deterministic",
    "drift",
    "overrun",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = []
